--- a/login.html
+++ b/login.html
@@ -32,8 +32,10 @@
                 <p>or</p>
                 <p><a href="#" class="black style-n"><i class="fa-brands fa-google"></i>continue with google</a></p>
             </div>
-
-            <button type="submit" class="btn btn-primary mtb">continue</button>
+            <!-- <a href="login.html"
+            class="black">Continue</a> -->
+            <button type="submit" class="btn btn-primary mtb"> <a href="templateScratch.html"
+                class="black">Continue</a></button>
         </form>
 
     </div>
