improved structuring of project

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
 
                 <div id="navbarNav">
                     <ul class="navbar-nav">
-                        <li class="nav-item"><a class="nav-link" href="login.html">login </a>
+                        <li class="nav-item"><a class="nav-link" href="login page/login.html">login </a>
                         </li>
-                        <li class="nav-item"><a class="nav-link style-n nav-item" href="signup.html">sign up</a></li>
+                        <li class="nav-item"><a class="nav-link style-n nav-item" href="signup page/signup.html">sign up</a></li>
                     </ul>
                 </div>
             </div>
@@ -89,7 +89,7 @@
             dolorem id obcaecati maiores possimus? Provident eligendi aspernatur quasi! Ipsam rem aperiam excepturi
             facere sapiente aspernatur! Recusandae id pariatur atque? Provident, expedita culpa delectus alias labore
             porro.</p>
-        <a href="signup.html" class="white style-n"><button type="button" class="btn btn-primary b1">start your
+        <a href="signup page/signup.html" class="white style-n"><button type="button" class="btn btn-primary b1">start your
                 website</button></a>
     </div>
 
@@ -116,7 +116,7 @@
     <section class="grey sec-2">
         <h1 class=" center light-green margin-top">Build a site. Sell your stuff. Start a blog.<br>
             And so much more.</h1>
-        <h4 class="center light-green">All on<img src="logo.png" alt="logo" width="30" height="24"> DDYPR </h4>
+        <h4 class="center light-green">All on<img src="images/logo.png" alt="logo" width="30" height="24"> DDYPR </h4>
     </section>
 
     <!-- SECTION-3  -->
