link temp or scratch page

--- a/signup page/signup.html
+++ b/signup page/signup.html
@@ -49,7 +49,7 @@
                 <p class="google"><a href="#" class="black style-n"><i class="fa-brands fa-google"></i>Continue with google</a></p>
             </div>
             
-            <button type="submit" class="btn btn-primary">Sign Up</button>
+            <button type="submit" id="signup" class="btn btn-primary">Sign Up</button>
         </form>
         
     </div>
@@ -61,7 +61,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js"
         integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk"
         crossorigin="anonymous"></script>
-    <script src="script.js">
+    <script src="signup.js">
     </script>
 </body>
 
