--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link href="style.css" rel="stylesheet">
     <title>DDYPR</title>
-    <link rel="icon" href="logo.png">
+    <link rel="icon" href="images/logo.png">
 </head>
 
 <body>
@@ -18,7 +18,7 @@
 
     <nav class="navbar navbar-expand-lg  nav-res">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html"><img src="logo.png" alt="logo" width="50" height="44">DDYPR</a>
+            <a class="navbar-brand" href="index.html"><img src="images/logo.png" alt="logo" width="50" height="44">DDYPR</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
